Fix #4668: table-responsive tables do not overflow due to default word break style

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -137,4 +137,11 @@ span.likeLinkContainer .like.disabled, span.likeLinkContainer .unlike.disabled {
     font-size:13px;
 }
 
+.table-responsive {
+    overflow-wrap: normal;
+    word-break: normal;
+    -moz-hyphens: none;
+    hyphens: none;
+}
+
 
